--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ html {
 body {
   margin: 0;
   padding: 2rem;
+  text-align: center;
   font-size: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
